Server can be turned on